testdata/invalid/top_level_namespace_shadow.hzn
package probes

type xdp struct {
    pid u32
}
